Use the correct way to save changes to kdeglobals

Previous code was writing directly to kdeglobals, which prevented
the other KConfigGroup instances from being aware of the changes.

BUG: 139475